invisible uncovered now

--- a/essay/presentation.tex
+++ b/essay/presentation.tex
@@ -26,7 +26,7 @@
   \usetheme{Boadilla}
   %%\usetheme{Malmoe}
   %%\usetheme{Copenhagen}
-  \setbeamercovered{transparent}
+  \setbeamercovered{invisible}
   \setbeamertemplate{itemize items}[default]
   \usefonttheme{structurebold}
   \fontsize{10}{5}\selectfont
